# finance-forecaster

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/api/: main.py
backend/models/: baseline_prophet.py
backend/scripts/: __init__.py  ingest.py
data/processed/: transactions_20250802_195440.parquet  transactions_20250802_195500.parquet  transactions_20250802_195523.parquet
data/raw/: transactions.csv
docs/: eda_2025-08-02.html  metrics.md  model_training.md
flows/: training_flow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FileUpload.tsx  ForecastDisplay.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
notebooks/: eda_2025-08-02.ipynb
notebooks/.ipynb_checkpoints/: eda_2025-08-02-checkpoint.ipynb
scripts/: build.sh  dev.sh
