[project]
name = "finance-forecaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Mustafa777Xo",email = "mustafa777bdo@cleanlife.sa"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "mlflow (>=3.1.4,<4.0.0)",
    "prefect (>=3.4.10,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
